@@ -18,7 +18,7 @@ Config::Config( Logger *_logger, QObject *parent )
     connect( this, SIGNAL(updateWriteLogFilesSetting(bool)), logger, SLOT(updateWriteSetting(bool)) );
 
     pPluginLoader = new PluginLoader( logger, this );
-    pTagEngine = new TagEngine();
+    pTagEngine = new TagEngine( this );
     pConversionOptionsManager = new ConversionOptionsManager( pPluginLoader );
 
     data.general.updateDelay = 100;
@@ -100,6 +100,8 @@ void Config::load()
 
     group = conf->group( "CoverArt" );
     data.coverArt.writeCovers = group.readEntry( "writeCovers", 1 );
+    data.coverArt.writeCoverName = group.readEntry( "writeCoverName", 0 );
+    data.coverArt.writeCoverDefaultName = group.readEntry( "writeCoverDefaultName", i18nc("cover file name","cover") );
 
     group = conf->group( "Backends" );
     data.backends.rippers = group.readEntry( "rippers", QStringList() );
@@ -465,6 +467,8 @@ void Config::save()
 
     group = conf->group( "CoverArt" );
     group.writeEntry( "writeCovers", data.coverArt.writeCovers );
+    group.writeEntry( "writeCoverName", data.coverArt.writeCoverName );
+    group.writeEntry( "writeCoverDefaultName", data.coverArt.writeCoverDefaultName );
 
     group = conf->group( "Backends" );
     group.writeEntry( "rippers", data.backends.rippers );
