@@ -14,11 +14,13 @@
 #include "../config.h"
 
 #include <KLocale>
-#include <KIntSpinBox>
+// #include <KIntSpinBox>
+#include <KLineEdit>
 
 #include <QLayout>
 #include <QLabel>
 #include <QRadioButton>
+#include <QButtonGroup>
 
 
 ConfigCoverArtPage::ConfigCoverArtPage( Config *_config, QWidget *parent )
@@ -27,14 +29,21 @@ ConfigCoverArtPage::ConfigCoverArtPage( Config *_config, QWidget *parent )
 {
     QVBoxLayout *box = new QVBoxLayout( this );
 
-    QLabel* lUWriteCovers = new QLabel( i18n("Save embedded covers to output directory"), this );
-    box->addWidget( lUWriteCovers );
+    QLabel *lWriteCovers = new QLabel( i18n("Save embedded covers to output directory"), this );
+    box->addWidget( lWriteCovers );
     rWriteCoversAlways = new QRadioButton( i18n("Always"), this );
     box->addWidget( rWriteCoversAlways );
     rWriteCoversAuto = new QRadioButton( i18n("Only if embedding the covers into the output files is not possible"), this );
     box->addWidget( rWriteCoversAuto );
     rWriteCoversNever = new QRadioButton( i18n("Never"), this );
     box->addWidget( rWriteCoversNever );
+
+    QButtonGroup *writeCoversGroup = new QButtonGroup( this );
+    writeCoversGroup->addButton( rWriteCoversAlways );
+    writeCoversGroup->addButton( rWriteCoversAuto );
+    writeCoversGroup->addButton( rWriteCoversNever );
+
+    connect( writeCoversGroup, SIGNAL(buttonClicked(QAbstractButton*)), this, SLOT(writeCoversChanged(QAbstractButton*)) );
 
     if( config->data.coverArt.writeCovers == 0 )
         rWriteCoversAlways->setChecked( true );
@@ -43,6 +52,35 @@ ConfigCoverArtPage::ConfigCoverArtPage( Config *_config, QWidget *parent )
     else if( config->data.coverArt.writeCovers == 2 )
         rWriteCoversNever->setChecked( true );
 
+    box->addSpacing( 5 );
+
+    lWriteCoverName = new QLabel( i18n("File name for the cover"), this );
+    box->addWidget( lWriteCoverName );
+    rWriteCoverNameTitle = new QRadioButton( i18n("Use embedded cover title"), this );
+    box->addWidget( rWriteCoverNameTitle );
+    rWriteCoverNameDefault = new QRadioButton( i18n("Use the default name"), this );
+    box->addWidget( rWriteCoverNameDefault );
+
+    QHBoxLayout *writeCoverNameTextBox = new QHBoxLayout( this );
+    lWriteCoverNameDefaultLabel = new QLabel( i18n("Default cover name:"), this );
+    writeCoverNameTextBox->addWidget( lWriteCoverNameDefaultLabel );
+    lWriteCoverNameDefaultEdit = new KLineEdit( this );
+    lWriteCoverNameDefaultEdit->setToolTip( i18n("The following strings are wildcards, that will be replaced\nby the information in the meta data:\n\n%a - Artist\n%b - Album") );
+    writeCoverNameTextBox->addWidget( lWriteCoverNameDefaultEdit );
+    writeCoverNameTextBox->addStretch();
+    box->addLayout( writeCoverNameTextBox );
+
+    QButtonGroup *writeCoverNameGroup = new QButtonGroup( this );
+    writeCoverNameGroup->addButton( rWriteCoverNameTitle );
+    writeCoverNameGroup->addButton( rWriteCoverNameDefault );
+
+    connect( writeCoverNameGroup, SIGNAL(buttonClicked(QAbstractButton*)), this, SLOT(writeCoverNameChanged(QAbstractButton*)) );
+
+    if( config->data.coverArt.writeCoverName == 0 )
+        rWriteCoverNameTitle->setChecked( true );
+    else if( config->data.coverArt.writeCoverName == 1 )
+        rWriteCoverNameDefault->setChecked( true );
+    lWriteCoverNameDefaultEdit->setText( config->data.coverArt.writeCoverDefaultName );
 
 //     QGroupBox *coverGroup = new QGroupBox( i18n("CD covers"), this );
 //     box->addWidget( coverGroup );
@@ -87,6 +125,8 @@ ConfigCoverArtPage::~ConfigCoverArtPage()
 void ConfigCoverArtPage::resetDefaults()
 {
     rWriteCoversAuto->setChecked( true );
+    rWriteCoverNameTitle->setChecked( true );
+    lWriteCoverNameDefaultEdit->setText( i18nc("cover file name","cover") );
 
     emit configChanged( true );
 }
@@ -99,5 +139,36 @@ void ConfigCoverArtPage::saveSettings()
         config->data.coverArt.writeCovers = 1;
     else if( rWriteCoversNever->isChecked() )
         config->data.coverArt.writeCovers = 2;
+
+    if( rWriteCoverNameTitle->isChecked() )
+        config->data.coverArt.writeCoverName = 0;
+    else if( rWriteCoverNameDefault->isChecked() )
+        config->data.coverArt.writeCoverName = 1;
+
+    config->data.coverArt.writeCoverDefaultName = lWriteCoverNameDefaultEdit->text();
 }
 
+void ConfigCoverArtPage::writeCoversChanged( QAbstractButton *button )
+{
+    if( button == rWriteCoversNever )
+    {
+        lWriteCoverName->setEnabled( false );
+        rWriteCoverNameTitle->setEnabled( false );
+        rWriteCoverNameDefault->setEnabled( false );
+        lWriteCoverNameDefaultLabel->setEnabled( false );
+        lWriteCoverNameDefaultEdit->setEnabled( false );
+    }
+    else
+    {
+        lWriteCoverName->setEnabled( true );
+        rWriteCoverNameTitle->setEnabled( true );
+        rWriteCoverNameDefault->setEnabled( true );
+        lWriteCoverNameDefaultLabel->setEnabled( true );
+        lWriteCoverNameDefaultEdit->setEnabled( true );
+    }
+}
+
+void ConfigCoverArtPage::writeCoverNameChanged( QAbstractButton *button )
+{
+    Q_UNUSED( button );
+}
