@@ -1,5 +1,6 @@
 1.5.90:
 -Add: Make the 'Failed' status clickable and open the log if clicked
+-Add: Make the file name of covers written to the output directory configureable
 -Fix: Problem dialog wasn't shown when dropping unsupported files on the soundKonverter or ReplayGain tool window
 -Fix: Show progress when decoding properly
 
